Adding the footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div> Title</div>
+    <div>
+        <ul>
+            <li>Item 1</li>
+            <li>Item2</li>
+        </ul>
+    </div>
+    <div>
+        <footer>Copyright @whatever</footer>
+    </div>
 </body>
 </html>
